[package]
name = "strsim"
version = "0.11.1"
authors = ["Danny Guo <danny@dannyguo.com>", "maxbachmann <oss@maxbachmann.de>"]
description = """
Implementations of string similarity metrics. Includes Hamming, Levenshtein,
OSA, Damerau-Levenshtein, Jaro, Jaro-Winkler, and Sørensen-Dice.
"""
edition = "2021"
license = "MIT"
rust-version = "1.56"
readme = "README.md"
keywords = ["string", "similarity", "Hamming", "Levenshtein", "Jaro"]
homepage = "https://github.com/rapidfuzz/strsim-rs"
repository = "https://github.com/rapidfuzz/strsim-rs"
documentation = "https://docs.rs/strsim/"
exclude = ["/.github", "/dev"]
categories = ["text-processing"]

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "benches"
harness = false
path = "benches/benches.rs"

[profile.bench]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
incremental = false
rpath = false